odoo18/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kobimate-odoo18
  namespace: default
  labels:
    app: odoo18-paket-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kobimate-odoo18
  template:
    metadata:
      labels:
        app: kobimate-odoo18
    spec:
      imagePullSecrets:
        - name: git-sync-secret
      containers:
        - name: kobimate-odoo18
          image: ghcr.io/kobimate/odoo:18.0-latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8069
          volumeMounts:
            - name: odoo18-kobimate-volume
              mountPath: /data/odoo

      volumes:
        - name: odoo18-kobimate-volume
          persistentVolumeClaim:
            claimName: kobimate-odoo18-pvc
