odoo18/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kobimate-odoo18-service
spec:
  type: ClusterIP  
  ports:
    - name: odoohttp
      port: 80
      targetPort: 8069
    - name: odoohttps
      port: 443
      targetPort: 8069
    - name: longpolling
      port: 8072
  selector:
    app: kobimate-odoo18
