odoo18/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kobimate-odoo18-ingress
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  ingressClassName: kobimate-odoo18-ingress
  rules:
  - host: odoo18.kobimate.com
    https:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: kobimate-odoo18-service
              port:
                number: 8069
        - path: /
          pathType: Prefix
          backend:
            service:
              name: kobimate-odoo18-service
              port:
                number: 8072
  tls:
  - hosts:
    - odoo18.kobimate.com
    secretName: kobimate-tls
